# embodied_exps

./: .gitignore  README.md  dqn_cartpole.pth  environment.yml  main.py  pyproject.toml  requirements.txt
checkpoints/: dqn_cartpole.pth
checkpoints/ddqn/: ddqn_cartpole.pth
checkpoints/dqn/: dqn_cartpole.pth
checkpoints/dqn/20251120-2008/: ckpt_ep100.pth  ckpt_ep150.pth  ckpt_ep200.pth  ckpt_ep250.pth  ckpt_ep300.pth  ckpt_ep350.pth  ckpt_ep400.pth  ckpt_ep450.pth  ckpt_ep50.pth  ckpt_ep500.pth  config.json
checkpoints/dqn/20251120-2025/: ckpt_ep50.pth
checkpoints/dqn/20251120-2036/: ckpt_ep50.pth
checkpoints/dqn/20251120-2101/: config.json
checkpoints/dqn/20251120-2108/: model_last.pth
rl_models/: __init__.py  exploration.py
rl_models/algorithms/: __init__.py  ddpg.py  ddqn.py  dqn.py  td3.py
rl_models/common/: __init__.py  logger.py  replay_buffer.py  sum_tree.py  utils.py
rl_models/configs/: __init__.py  common_config.py  ddpg_config.py  ddqn_config.py  dqn_config.py  td3_config.py
rl_models/core/: base.py
rl_models/core/explorations/: __init__.py  exploration.py  exploration_cfgs.py
rl_models/envs/: __init__.py  env_plant.py  parallel_env.py
rl_models/nets/: __init__.py  dqn_models.py  dqpg_models.py  mlp.py
rl_models/runner/: __init__.py  evaluator.py  recorder.py  trainer.py
scripts/: test_ddpg.py  test_ddqn.py  test_dqn.py  test_td3.py  train_ddpg.py  train_ddqn.py  train_dqn.py  train_td3.py  train_td3_parallel.py
