[project]
name = "embodied-exps"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "draccus>=0.11.5",
    "gymnasium[classic-control]>=1.2.2",
    "imageio>=2.37.2",
    "matplotlib>=3.10.7",
    "numpy>=2.2.6",
    "pybullet-envs-gymnasium>=0.6.0",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["rl_models"]

[dependency-groups]
dev = [
    "ruff>=0.14.5",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
